// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex arrays 1`] = `
%root%
null
[
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null
]
`;

exports[`multiple independent rebuilds: after rebuilds 1`] = `
%root%
null
[
  %ref1%
  null
  [
    %stateful%
    2
    [
      null
    ]
  ],
  %stateful%
  1
  [
    null
  ],
  %stateful%
  1
  [
    %ref2%
    null
    [
      %stateful%
      2
      [
        null
      ]
    ],
    %stateful%
    1
    []
  ]
]
`;

exports[`multiple independent rebuilds: before rebuilds 1`] = `
%root%
null
[
  %ref1%
  null
  [
    %stateful%
    1
    [
      null
    ]
  ],
  %stateful%
  1
  [
    null
  ],
  %stateful%
  1
  [
    %ref2%
    null
    [
      %stateful%
      1
      [
        null
      ]
    ],
    %stateful%
    1
    []
  ]
]
`;

exports[`multiple nested rebuilds: after rebuilds 1`] = `
%root%
null
[
  %stateful%
  1
  [],
  %ref1%
  null
  [
    %stateful%
    2
    [
      null,
      %stateful%
      2
      [
        null
      ],
      %stateful%
      2
      [
        %ref2%
        null
        [
          %stateful%
          2
          [
            null
          ]
        ],
        %stateful%
        2
        []
      ]
    ]
  ]
]
`;

exports[`multiple nested rebuilds: before rebuilds 1`] = `
%root%
null
[
  %stateful%
  1
  [],
  %ref1%
  null
  [
    %stateful%
    1
    [
      null,
      %stateful%
      1
      [
        null
      ],
      %stateful%
      1
      [
        %ref2%
        null
        [
          %stateful%
          1
          [
            null
          ]
        ],
        %stateful%
        1
        []
      ]
    ]
  ]
]
`;

exports[`nested arrays 1`] = `
%root%
null
[
  %container%
  null
  [
    null
  ]
]
`;

exports[`nested arrays 2`] = `
%root%
null
[
  %container%
  null
  [
    null
  ]
]
`;

exports[`parent vs owner 1`] = `
%root%
null
[
  %parent%
  null
  [
    %stateful%
    1
    [
      null
    ],
    %stateful%
    1
    [
      null
    ]
  ]
]
`;

exports[`parent vs owner 2`] = `
%root%
null
[
  %parent%
  null
  [
    %stateful%
    2
    [
      null
    ],
    %stateful%
    1
    [
      null
    ]
  ]
]
`;

exports[`simple build tree 1`] = `
%root%
null
[
  %container%
  null
  [
    null
  ]
]
`;
